[tool.poetry]
name = "repl_nix_ComplexFelineIde"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
html2text = "^2020.1.16"
openai = "^0.27.8"
requests = "^2.31.0"
boto3 = "^1.26.163"
botocore = "^1.29.163"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
